adjust text width on mobile to prevent overflow

--- a/staticfiles/css/blog.css
+++ b/staticfiles/css/blog.css
@@ -123,7 +123,7 @@ img {max-width:100%;}
 	.flex-text{
 		
 		flex-basis: auto;
-		max-width: 90%;
+		max-width: 80%;
 	}
 
 	
